--- a/index.html
+++ b/index.html
@@ -278,6 +278,14 @@
 	
 	<div class="clearfix"></div>
 	
+	<div class="row m-0 pb-3">
+		<div class="col-12" style="height:300px; overflow:hidden;">
+			<div class="embed-responsive embed-responsive-16by9 mb-3" style="height:300px; overflow:hidden;">
+			<!--<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.5556651009742!2d73.92093031460465!3d18.548970987392444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c16f83ffffff%3A0xad6b865dfacaa9b6!2sPolymer+Colour+Company!5e0!3m2!1sen!2sin!4v1527950730650"  allowfullscreen></iframe>-->
+			<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.5556651009742!2d73.92093031460465!3d18.548970987392444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c16f83ffffff%3A0xad6b865dfacaa9b6!2sPolymer+Colour+Company!5e0!3m2!1sen!2sin!4v1527950730650" width="800" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
 	
 	<section id="footer" class="pt-2">
 		<div class="container footer">
