footer code updated

--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
 				<div class="col-sm-12 col-md-4 col-xs-12">
 					<h6>Footer Links</h6>
 					<ul class="list-unstyled">
-						<li><a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a></li>						
-						<li><a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a></li>
-						<li><a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Products</a></li>
-						<li><a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a></li>
+						<li><a class="text-white" onclick="slideHome();" href="javascript:void(0);"><i class="fa fa-angle-right mr-2"></i>Home</a></li>						
+						<li><a class="text-white" onclick="slideAbout();" href="javascript:void(0);"><i class="fa fa-angle-right mr-2"></i>About Us</a></li>
+						<li><a class="text-white" onclick="slideGallery();" href="javascript:void(0);"><i class="fa fa-angle-right mr-2"></i>Products</a></li>
+						<li><a class="text-white" onclick="slideContact();" href="javascript:void(0);"><i class="fa fa-angle-right mr-2"></i>Contact Us</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-12 col-md-4 col-xs-12 border-left border-default pl-4 pr-4">
